# ai-content-processor

./: .env.example  README.md  image_vector.py  main.py  pyproject.toml
scripts/: analyze_image.py  process_meeting.py  transcribe.py
src/: __init__.py
src/config/: settings.py
src/core/: __init__.py  llm_client.py  prompt_templates.py
src/services/: __init__.py  audio_service.py  document_service.py  image_service.py  nutrition_service.py  webpage_qa_service.py
src/web/: __init__.py  api.py  app.py
